@@ -1,3 +1,10 @@
+2008-12-05  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Style.cs:
+	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add Style.LabelDecoration,
+	Style.LabelOutlineColor, and Style.LabelOutlineWidth
+
 2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Style.cs:
